--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,12 @@
     "eslint-config-next": "13.4.3",
     "next": "13.4.3",
     "react": "18.2.0",
+    "react-datepicker": "^4.12.0",
     "react-dom": "18.2.0",
     "styled-components": "^6.0.0-rc.1",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/react-datepicker": "^4.11.2"
   }
 }
