--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,19 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.3",
+    "@mui/styled-engine-sc": "^5.12.0",
     "@types/node": "20.2.3",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "axios": "^1.4.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
     "next": "13.4.3",
     "react": "18.2.0",
     "react-datepicker": "^4.12.0",
     "react-dom": "18.2.0",
-    "styled-components": "^6.0.0-rc.1",
+    "recoil": "^0.7.7",
+    "styled-components": "^6.0.0-rc.3",
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "@types/react-datepicker": "^4.11.2"
+    "@types/react-datepicker": "^4.11.2",
+    "babel-plugin-styled-components": "^2.1.3"
   }
 }
